# llmime

./: .gitignore  Cargo.toml  README.md  config.toml.sample
.github/workflows/: ci.yml  release-macos.yml
apps/llmime-settings/: Package.swift  README.md
apps/llmime-settings/Sources/LlmimeSettings/: AppMain.swift  SettingsView.swift
crates/llmime-cli/: Cargo.toml
crates/llmime-cli/src/: main.rs
crates/llmime-cli/tests/: cli_integration.rs
crates/llmime-core/: Cargo.toml
crates/llmime-core/src/: config.rs  config_ffi.rs  consent.rs  lib.rs  paths.rs  scoring.rs
crates/llmime-core/src/field/: classifier.rs  focus_watcher.rs  mod.rs
crates/llmime-core/src/history/: mod.rs
crates/llmime-core/src/inference/: builder.rs  capabilities.rs  cost_guard.rs  cost_monitor.rs  dispatcher.rs  error.rs  fallback_chain.rs  inferencer.rs  latency_tracker.rs  local_llm.rs  local_ngram.rs  memory_estimator.rs  mod.rs  mode.rs  model_downloader.rs  model_scanner.rs  ollama.rs  override_manager.rs  retry.rs  token_counter.rs  warmup.rs  workers_ai.rs
crates/llmime-core/src/lm/: kenlm.rs  mod.rs
crates/llmime-core/src/morphology/: mod.rs
crates/llmime-core/src/pipeline/: async_pipeline.rs  mod.rs
crates/llmime-core/src/reading_index/: lattice.rs  mod.rs  mozc.rs  pos_connection.rs
crates/llmime-core/src/rerank/: animation_scheduler.rs  inline_popup.rs  mod.rs  rerank_queue.rs  selection_reranker.rs  selection_trigger.rs  streaming_boundary.rs  update_gate.rs
crates/llmime-core/src/user_dict/: mod.rs
crates/llmime-core/src/ux/: live_conversion.rs  mod.rs
crates/llmime-core/tests/: nf032_integration.rs  p4_prompt_eval.rs  p5_e2e_integration.rs  phase3_integration.rs
crates/llmime-imk/: Cargo.toml  build.rs
crates/llmime-imk/objc/: LlmimeIMController.m  imk_main.m
crates/llmime-imk/src/: candidates.rs  ffi.rs  field_detector.rs  imk_adapter.rs  inline_popup_layer.rs  lib.rs  main.rs  mode_indicator.rs  selection_watcher.rs  session.rs  settings_ffi.rs  text_replace.rs
crates/llmime-tsf/: Cargo.toml
crates/llmime-tsf/src/: dll.rs  field_detector.rs  inline_popup_layer.rs  key_sink.rs  lib.rs  mode_indicator.rs  selection_sink.rs  state.rs  text_replace.rs  text_store.rs  tsf.rs  tsf_adapter.rs
docs/: RELEASE.md  install-macos.md  requirements.md
docs/guide/: local-trial.md  shogun-verification.md
experiments/: f_b1_axis1.json  f_b1_axis2.json  f_b1_axis3.json  f_b1_axis4.json  f_b1_progress.md
prompts/: rerank_v1.md
reports/: cir_baseline_20260421.md  lm_eval_20260418.md  lm_eval_20260419.md  lm_eval_20260421_f_a1.md  lm_eval_20260428_p2t1.md  lm_eval_pending.md
resources/macos/: Info.plist.in  llmime.entitlements
resources/macos/ja.lproj/: InfoPlist.strings
scripts/: build_lm.sh  build_reading_index.py  codesign_macos.sh  download_data.sh  evaluate_lm.py  evaluate_local_llm.py  f_a1_viterbi_grid_search.py  install-macos.sh  notarize_macos.sh  p6_eval_results.json  package_macos.sh  run_eval.sh  run_wikiextractor.py  s005_rerank_spike.py  setup.sh  setup_dict.sh  test_evaluate_lm.py
tests/: test_idiom_aliases.py
tests/lm_eval/: idiom_aliases.json  s005_testset.csv  testset.csv  testset_part_a6.csv
