[package]
name = "llmime-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "llmime"
path = "src/main.rs"

[dependencies]
llmime-core = { path = "../llmime-core" }
clap = { version = "4", features = ["derive", "env"] }
anyhow = "1"
serde_json = "1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
