[package]
name = "llmime-core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
async-trait = "0.1"
dirs = "5"
futures = "0.3"
dotenvy = "0.15"
hex = "0.4"
llama-cpp-rs = { package = "llama_cpp", version = "0.3", optional = true }
reqwest = { version = "0.12", features = ["json", "stream"] }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt", "sync", "time"] }
tracing = "0.1"
vibrato = "0.5"
toml = "1.1.2"

[features]
local-llm = ["dep:llama-cpp-rs"]
local-llm-metal = ["local-llm", "llama-cpp-rs/accel"]
local-llm-cuda = ["local-llm", "llama-cpp-rs/cuda"]

[dev-dependencies]
serial_test = "3.4.0"
tempfile = "3.27.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
wiremock = "0.6"
