[package]
name = "llmime-imk"
version = "0.1.0"
edition = "2021"
description = "macOS Input Method Kit integration for llmime"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
llmime-core = { path = "../llmime-core" }
anyhow = "1"
log = "0.4"

[build-dependencies]
cc = "1"

[target.'cfg(target_os = "macos")'.dependencies]
# macOS-only runtime dependencies
