[package]
name = "llmime-imk"
version = "0.1.0"
edition = "2021"
description = "macOS Input Method Kit integration for llmime"

[[bin]]
name = "llmime"
path = "src/main.rs"

[lib]
crate-type = ["rlib"]

[dependencies]
llmime-core = { path = "../llmime-core" }
anyhow = "1"
log = "0.4"
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }

[dev-dependencies]
async-trait = "0.1"
tempfile = "3"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "time"] }

[build-dependencies]
cc = "1"

[target.'cfg(target_os = "macos")'.dependencies]
accessibility-sys = "0.2"
core-foundation = "0.9"
